[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://green_button.tres" type="StyleBox" id=2]
[ext_resource path="res://green_button_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Kenney Pixel Square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Forest.tres" type="TileSet" id=5]
[ext_resource path="res://louie-naked.png" type="Texture" id=6]
[ext_resource path="res://only-empty.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Kenney Pixel Square.ttf"

[sub_resource type="DynamicFont" id=2]

size = 32
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -4
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 32
extra_spacing_top = -4
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]

resource_name = "Idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hat:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Eyes:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Clothes:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="UI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -320.0
margin_right = 640.0
margin_bottom = 320.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 640.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
editor/display_folded = true
margin_left = 514.0
margin_top = 220.0
margin_right = 766.0
margin_bottom = 420.0

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 252.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.662745, 0.662745, 0.662745, 1 )
text = "START GAME"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 68.0
margin_right = 252.0
margin_bottom = 132.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.662745, 0.662745, 0.662745, 1 )
text = "OPTIONS"

[node name="Outfit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 252.0
margin_bottom = 132.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.662745, 0.662745, 0.662745, 1 )
text = "OUTFIT"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 252.0
margin_bottom = 200.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.662745, 0.662745, 0.662745, 1 )
text = "Quit"

[node name="Node2D" type="Node2D" parent="."]

[node name="Water" type="TileMap" parent="Node2D"]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589833, 0, 327681, 589834, 0, 327681, 589835, 0, 327681 )

[node name="TileMap" type="TileMap" parent="Node2D"]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 16, 0, 327680, 65552, 0, 327680, 131088, 0, 327680, 196624, 0, 393216, 458753, 0, 393225, 458757, 0, 7, 458767, 0, 327688, 524288, 0, 1, 524289, 0, 1, 524290, 0, 1, 524291, 0, 1, 524292, 0, 1, 524293, 0, 1, 524294, 0, 1, 524295, 0, 1, 524296, 0, 1, 524297, 0, 65538, 524299, 0, 65537, 524300, 0, 1, 524301, 0, 1, 524302, 0, 1, 524303, 0, 1, 524304, 0, 1, 524305, 0, 1, 524306, 0, 1, 524307, 0, 1, 589824, 0, 65540, 589825, 0, 65540, 589826, 0, 196608, 589827, 0, 65540, 589828, 0, 65540, 589829, 0, 65540, 589830, 0, 65540, 589831, 0, 65540, 589832, 0, 65540, 589833, 0, 65541, 589835, 0, 65539, 589836, 0, 65540, 589837, 0, 196608, 589838, 0, 65540, 589839, 0, 65540, 589840, 0, 65540, 589841, 0, 65540, 589842, 0, 65540, 589843, 0, 65540 )

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 1088, 432 )
scale = Vector2( -5, 5 )
texture = ExtResource( 6 )
hframes = 24
region_rect = Rect2( 0, 0, 768, 32 )

[node name="Hat" type="Sprite" parent="Node2D"]
position = Vector2( 1088, 432 )
scale = Vector2( -5, 5 )
texture = ExtResource( 7 )
hframes = 24
region_rect = Rect2( 0, 0, 768, 32 )

[node name="Eyes" type="Sprite" parent="Node2D"]
position = Vector2( 1088, 432 )
scale = Vector2( -5, 5 )
texture = ExtResource( 7 )
hframes = 24
region_rect = Rect2( 0, 0, 768, 32 )

[node name="Clothes" type="Sprite" parent="Node2D"]
position = Vector2( 1088, 432 )
scale = Vector2( -5, 5 )
texture = ExtResource( 7 )
hframes = 24
region_rect = Rect2( 0, 0, 768, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
anims/Idle = SubResource( 4 )

[node name="Hat_next" type="Button" parent="."]
margin_left = 1136.0
margin_top = 416.0
margin_right = 1148.0
margin_bottom = 436.0
text = ">"

[node name="Eyes_next" type="Button" parent="."]
margin_left = 1136.0
margin_top = 448.0
margin_right = 1156.0
margin_bottom = 468.0
text = ">"

[node name="Clothes_next" type="Button" parent="."]
margin_left = 1136.0
margin_top = 480.0
margin_right = 1156.0
margin_bottom = 500.0
text = ">"

[node name="Hat_prev" type="Button" parent="."]
margin_left = 1008.0
margin_top = 416.0
margin_right = 1028.0
margin_bottom = 436.0
text = "<"

[node name="Eyes_prev" type="Button" parent="."]
margin_left = 1008.0
margin_top = 448.0
margin_right = 1028.0
margin_bottom = 468.0
text = "<"

[node name="Clothes_prev" type="Button" parent="."]
margin_left = 1008.0
margin_top = 480.0
margin_right = 1028.0
margin_bottom = 500.0
text = "<"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Outfit" to="." method="_on_Outfit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Hat_next" to="." method="_on_Hat_next_pressed"]
[connection signal="pressed" from="Eyes_next" to="." method="_on_Eyes_next_pressed"]
[connection signal="pressed" from="Clothes_next" to="." method="_on_Clothes_next_pressed"]
[connection signal="pressed" from="Hat_prev" to="." method="_on_Hat_prev_pressed"]
[connection signal="pressed" from="Eyes_prev" to="." method="_on_Eyes_prev_pressed"]
[connection signal="pressed" from="Clothes_prev" to="." method="_on_Clothes_prev_pressed"]
